--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </HEAD>
 <FRAMESET COLS="17%,83%">
 <FRAME SRC="sidebar.htm" NAME="Frame27205">
-<FRAME SRC="../homepage/" NAME="Frame7036">
+<FRAME SRC="homepage/index.html" NAME="Frame7036">
 <NOFRAMES>
 <BODY>
 Viewing this page requires a browser capable of displaying frames.
